crates/wolf_mem/tests/snapshots/mem_diagnostics__clean_region_inference.snap
---
source: crates/wolf_mem/tests/mem_diagnostics.rs
assertion_line: 54
expression: render_mem(src)
---
(clean)
