crates/wolf_mem/tests/snapshots/mem_diagnostics__e1001_defer_capture.snap
---
source: crates/wolf_mem/tests/mem_diagnostics.rs
expression: render_mem(src)
---
error[E1001]: `b` is used here after its value moved away
 --> mem:///main.lu:5:24
  |
5 |     defer consume(take b)
  |                        ^ used after the move
6 |     let n = consume(take b)
  |                          - `b` moved here
  |
  = note: re-initializing the place (assigning to it) also makes it usable again.
help: to keep the original, copy it at the move
  |
6 |     let n = consume(take copy b)
  |
