crates/wolf_mem/tests/snapshots/mem_diagnostics__e1001_elem_map_str_local_key.snap
---
source: crates/wolf_mem/tests/mem_diagnostics.rs
expression: render_mem(src)
---
error[E1001]: `m["a"]` is used here after its value moved away
 --> mem:///main.lu:8:13
  |
5 |     var v = m[k] else List[int]()
  |             ---- `m[_]` moved here
...
8 |     let w = m["a"] else List[int]()
  |             ^^^^^^ used after the move
  |
  = note: `m["a"]` may reach the moved `m[_]`: an index that is not a literal is one place with
    every other index of its container [mem.model.place.elem]. Distinct literal indices stay
    usable.
  = note: re-initializing the place (assigning to it) also makes it usable again.
help: to keep the original, copy it at the move
  |
5 |     var v = copy m[k] else List[int]()
  |
