crates/wolf_mem/tests/snapshots/mem_diagnostics__e1001_elem_may_alias.snap
---
source: crates/wolf_mem/tests/mem_diagnostics.rs
expression: render_mem(src)
---
error[E1001]: `xs[i].len` is used here after its value moved away
 --> mem:///main.lu:7:13
  |
6 |     let a = move xs[0]
  |                  ----- `xs[0]` moved here
7 |     a.len + xs[i].len
  |             ^^^^^^^^^ used after the move
  |
  = note: `xs[i].len` may reach the moved `xs[0]`: an index that is not a literal is one place
    with every other index of its container [mem.model.place.elem]. Distinct literal indices
    stay usable.
  = note: re-initializing the place (assigning to it) also makes it usable again.
help: to keep the original, copy it at the move
  |
6 |     let a = move copy xs[0]
  |
