crates/wolf_mem/tests/snapshots/mem_diagnostics__e1001_elem_r3_loop.snap
---
source: crates/wolf_mem/tests/mem_diagnostics.rs
expression: render_mem(src)
---
error[E1001]: `xs[i]` is used here after its value moved away
 --> mem:///main.lu:8:25
  |
8 |             keep = move xs[i]
  |                         ^^^^^ used after the move
  |                         ----- `xs[i]` moved here
  |
  = note: re-initializing the place (assigning to it) also makes it usable again.
help: to keep the original, copy it at the move
  |
8 |             keep = move copy xs[i]
  |

error[E1001]: `xs[0].len` is used here after its value moved away
  --> mem:///main.lu:13:16
   |
 8 |             keep = move xs[i]
   |                         ----- `xs[i]` moved here
...
13 |     keep.len + xs[0].len
   |                ^^^^^^^^^ used after the move
   |
   = note: `xs[0].len` may reach the moved `xs[i]`: an index that is not a literal is one place
     with every other index of its container [mem.model.place.elem]. Distinct literal indices
     stay usable.
   = note: re-initializing the place (assigning to it) also makes it usable again.
help: to keep the original, copy it at the move
   |
 8 |             keep = move copy xs[i]
   |
